// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main container Main container with header 1`] = `
.c0 {
  cursor: auto;
  margin-left: 190px;
  padding-top: 48px;
  padding-bottom: 14px;
  padding-left: 14px;
  padding-right: 0;
  background-color: #fff;
}

.c2 {
  cursor: auto;
  padding-top: 96px;
  padding-right: 14px;
}

.c3 {
  cursor: auto;
}

.c1 {
  cursor: auto;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 204px;
  padding-right: 14px;
  width: 100%;
  height: 96px;
  background-color: #fff;
  position: absolute;
  top: 48px;
  left: 0;
  position: fixed;
  z-index: 50;
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .c3 {
    display: none;
  }
}

@media screen and (min-width:1024px) and (max-width:1279px) {
  .c3 {
    display: none;
  }
}

@media screen and (min-width:1280px) {
  .c3 {
    display: none;
  }
}

<div
  className="c0"
  cursor="auto"
>
  <div
    className="c1"
    cursor="auto"
    height={96}
    width={1}
  >
    <div />
  </div>
  <div
    className="c2"
    cursor="auto"
  >
    <div
      className="c3"
      cursor="auto"
    />
    <div />
  </div>
</div>
`;

exports[`Main container Main container with sidebar 1`] = `
.c0 {
  cursor: auto;
  margin-left: 190px;
  padding-top: 48px;
  padding-bottom: 14px;
  padding-left: 14px;
  padding-right: 0;
  background-color: #fff;
}

.c3 {
  cursor: auto;
  padding-top: 14px;
  padding-right: 240px;
}

.c4 {
  cursor: auto;
}

.c1 {
  cursor: auto;
}

.c2 {
  cursor: auto;
  padding-top: 62px;
  padding-left: 14px;
  padding-right: 14px;
  width: 240px;
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  overflow-y: auto;
  position: fixed;
  z-index: 45;
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .c4 {
    display: none;
  }
}

@media screen and (min-width:1024px) and (max-width:1279px) {
  .c4 {
    display: none;
  }
}

@media screen and (min-width:1280px) {
  .c4 {
    display: none;
  }
}

@media screen and (max-width:511px) {
  .c1 {
    display: none;
  }
}

@media screen and (min-width:512px) and (max-width:639px) {
  .c1 {
    display: none;
  }
}

@media screen and (min-width:640px) and (max-width:767px) {
  .c1 {
    display: none;
  }
}

<div
  className="c0"
  cursor="auto"
>
  <div
    className="c1"
    cursor="auto"
  >
    <div
      className="c2"
      cursor="auto"
      height="100%"
      width={240}
    >
      <div />
    </div>
  </div>
  <div
    className="c3"
    cursor="auto"
  >
    <div
      className="c4"
      cursor="auto"
    >
      <div />
    </div>
    <div />
  </div>
</div>
`;

exports[`Main container Only main container 1`] = `
.c0 {
  cursor: auto;
  margin-left: 190px;
  padding-top: 48px;
  padding-bottom: 14px;
  padding-left: 14px;
  padding-right: 0;
  background-color: #fff;
}

.c1 {
  cursor: auto;
  padding-top: 14px;
  padding-right: 14px;
}

.c2 {
  cursor: auto;
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .c2 {
    display: none;
  }
}

@media screen and (min-width:1024px) and (max-width:1279px) {
  .c2 {
    display: none;
  }
}

@media screen and (min-width:1280px) {
  .c2 {
    display: none;
  }
}

<div
  className="c0"
  cursor="auto"
>
  <div
    className="c1"
    cursor="auto"
  >
    <div
      className="c2"
      cursor="auto"
    />
    <div />
  </div>
</div>
`;
